--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
     "marked": "0.3.x",
     "modernizr": "2.8.x",
     "moment": "2.9.x",
-    "underscore": "1.8.x"
+    "underscore": "1.8.x",
+    "parallax": "2.1.x",
+    "d3": "~3.5.5"
   }
 }
