--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "modernizr": "2.8.x",
     "moment": "2.9.x",
     "underscore": "1.8.x",
-    "parallax": "2.1.x",
-    "d3": "~3.5.5"
+    "parallax": "2.1.x"
+  },
+  "resolutions": {
+    "angular": "1.3.x"
   }
 }
