--- a/config/main.khe.conf
+++ b/config/main.khe.conf
@@ -11,6 +11,10 @@ server {
     try_files $uri $uri/ /index.html =404;
   }
 
+  location ~ \.(pdf) {
+    root /var/www/kenthackenough-ui-main/static;
+  }
+
   sendfile off;
 
 }
