--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,9 @@
     "moment": "2.9.x",
     "underscore": "1.8.x",
     "parallax": "2.1.x",
-    "d3": "~3.5.5"
+    "socket.io-client": "1.3.x"
+  },
+  "resolutions": {
+    "angular": "1.3.x"
   }
 }
