--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,9 @@
     "moment": "2.9.x",
     "underscore": "1.8.x",
     "socket.io-client": "1.3.x",
-    "snap.svg": "0.4.x"
+    "snap.svg": "0.4.x",
+    "animate.css": "~3.2.6",
+    "wow.js": "~1.1.2"
   },
   "resolutions": {
     "angular": "1.3.x"
