--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "angular": "1.3.x",
     "angular-cookies": "1.3.x",
-    "angular-route": "1.3.x",
     "angular-socket-io": "0.7.x",
     "fastclick": "1.0.x",
     "font-awesome": "4.3.x",
@@ -25,7 +24,8 @@
     "snap.svg": "0.4.x",
     "animate.css": "3.2.x",
     "wow.js": "1.1.x",
-    "angular-ui-router": "0.2.x"
+    "angular-ui-router": "0.2.x",
+    "angular-animate": "1.3.x"
   },
   "resolutions": {
     "angular": "1.3.x"
