--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "wow.js": "1.1.x",
     "angular-ui-router": "0.2.x",
     "angular-animate": "1.3.x",
-    "dropzone": "4.0.x"
+    "dropzone": "4.0.x",
+    "notify.js": "~1.2.5"
   },
   "resolutions": {
     "angular": "1.3.x"
