--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "angular-ui-router": "0.2.x",
     "angular-animate": "1.3.x",
     "dropzone": "4.0.x",
-    "notify.js": "~1.2.5"
+    "notify.js": "1.2.x",
+    "instafeed.js": "1.3.x"
   },
   "resolutions": {
     "angular": "1.3.x"
