--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "angular-animate": "1.3.x",
     "dropzone": "4.0.x",
     "notify.js": "1.2.x",
-    "instafeed.js": "1.3.x"
+    "instafeed.js": "1.3.x",
+    "angular-moment": "0.10.x"
   },
   "resolutions": {
     "angular": "1.3.x"
